<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="PRG_HVCP3_10CB1" Id="{e414a6f5-3442-4b90-95eb-1616ebbb79f3}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_HVCP3_10CB1
VAR
    // Function Block Instance
    fbDisconnector		: FB_DisconnectorControl;
	
	stDisconnectorIO	: ST_DisconnectorIO;
	
    
    // Başlangıç konfigürasyonu için flag
    bInitDone: BOOL := FALSE;	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF NOT bInitDone THEN
	bInitDone := TRUE;
	RETURN;
END_IF

//*************************************************************************
// Ana Besleme Ayırıcısı
// +EP6-8CB1
//*************************************************************************
fbDisconnector(
    // Fiziksel Girişler
    bContactorOn_FB 	:= stDisconnectorIO.bContactorOn_FB,
    bContactorOff_FB 	:= stDisconnectorIO.bContactorOff_FB,
    bLimitOn 			:= stDisconnectorIO.bLimitOn,
    bLimitOff 			:= stDisconnectorIO.bLimitOff,
    bThermalFault 		:= stDisconnectorIO.bThermalFault,
    bEarthSwitchOn 		:= stDisconnectorIO.bEarthSwitchOn,
    bEarthSwitchOff 	:= stDisconnectorIO.bEarthSwitchOff,
    bPLCControl 		:= stDisconnectorIO.bPLCControl,
    
    // Güvenlik Girişleri
    bSafetyLoop 		:= GVL_Alarm.bSafetyLoop,
    bInterlock 			:= FALSE,
    
    // Sistem Girişleri
    bMasterReset 		:= GVL_Alarm.bMasterReset,
    
    // HMI Bağlantısı
    stHMI 				:= GVL_HVCP3.stMainDisconnectorHMI,
    
    // Fiziksel Çıkışlar
    bContactorOn_Out 	=> stDisconnectorIO.bContactorOn_Out,
    bContactorOff_Out 	=> stDisconnectorIO.bContactorOff_Out
);
]]></ST>
    </Implementation>
    <Method Name="M_Init" Id="{c0cc1271-6af2-4678-9549-a615a7e98004}">
      <Declaration><![CDATA[METHOD M_Init : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
GVL_HVCP3.stMainDisconnectorHMI.stConfig.bEarthSwitchExists := TRUE;
GVL_HVCP3.stMainDisconnectorHMI.stConfig.bGrounded := TRUE;
GVL_HVCP3.stMainDisconnectorHMI.stConfig.bInterlockEnable := TRUE;
GVL_HVCP3.stMainDisconnectorHMI.stConfig.dwOperationLimit := 10000;
GVL_HVCP3.stMainDisconnectorHMI.stConfig.nPhaseCount := 3;
GVL_HVCP3.stMainDisconnectorHMI.stConfig.rRatedCurrent := 2000.0;
GVL_HVCP3.stMainDisconnectorHMI.stConfig.rRatedVoltage := 72000.0;
GVL_HVCP3.stMainDisconnectorHMI.stConfig.sProductCode := '';
GVL_HVCP3.stMainDisconnectorHMI.stConfig.sProjectCode := '+EP9-10CB1';
GVL_HVCP3.stMainDisconnectorHMI.stConfig.tContactorDelay := T#500MS;
GVL_HVCP3.stMainDisconnectorHMI.stConfig.tMotionTimeout := T#50S;
]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="PRG_HVCP3_10CB1">
      <LineId Id="147" Count="33" />
      <LineId Id="80" Count="0" />
    </LineIds>
    <LineIds Name="PRG_HVCP3_10CB1.M_Init">
      <LineId Id="9" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="10" Count="10" />
    </LineIds>
  </POU>
</TcPlcObject>